<resources>
    <string name="app_name">SaveData</string>
    <string name="saved_bootTimes">myTestSaveData</string>
    <string name="internalStorageFileName">MyInternalStorageFile</string>
    <string name="internalCacheFileName">MyInternalCacheFile</string>
    <string name="eStoragePublicFileName">MyExternalStoragePublicFile.txt</string>
    <string name="eStoragePrivateFileName">MyExternalStoragePrivateFile.txt</string>
    <string name="button_new_db">New SQLite DB</string>
    <string name="button_update_db">Update SQLite DB</string>
    <string name="button_insert_data">Insert Data</string>
    <string name="button_update_data">Update Data</string>
    <string name="button_query_data">Query Data</string>
    <string name="button_delete_data">Delete Data</string>

</resources>
